syntax = "proto3";

package multipaxos_rpc;

import "classic.proto";

message Log {
    
    string key = 1;
    string value = 2;
    int32 txn_id = 3;
}

message MPaxosMsg {

    int32 from = 2;
    int32 ballot = 3;
    int32 index = 4;
    classic.Txn txns = 5;
}

message Reply {

}

service MPaxos {
    rpc MPaxos(stream MPaxosMsg) returns (Reply);
}